adicionando cabeçalho e  metricas

--- a/index.html
+++ b/index.html
@@ -10,27 +10,77 @@
     <title>OptimusTech</title>
 </head>
 <body>
-    <header>
-        <div class="navigation">
-            <div class="logo-nav">
-                <img id="logo" src="./assets/image.png" alt="Logo da OptimusTech">
-                <h1 id="title-nav">OptimusTech</h1>
-            </div>
 
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="#">Recursos</a></li>
-                    <li><a href="#">Sobre nós</a></li>
-                </ul>
-            </nav>
 
-            <div class="navigation-actions">
-                <button id="btn-entrar">Entrar</button>
-                <button id="btn-cadastrar">Cadastrar</button>
-            </div>
+    <nav>
+
+
+        <div class="logo-nav">
+            <img id="logo" src="./assets/image.png" alt="Logo da OptimusTech">
+            <h1 id="title-nav">OptimusTech</h1>
         </div>
+        <div class="navigation">  
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Recursos</a></li>
+                <li><a href="#">Sobre nós</a></li>
+            </ul>
+        </div>
+        <div class="navigation-buttons">
+            <button id="btn-entrar">Entrar</button>
+            <button id="btn-cadastrar">Cadastrar</button>
+        </div>
+
+        
+    </nav>
+
+    <header>   
+
+
+            <p class="sub-heading">Sobre nós</p>
+            <div>
+                <h1>Por que somos diferentes?</h1>
+            </div>
+            <div class="heading-description">
+               <p> Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+            </div>
+
+
     </header>
+
+
+    <main>
+
+
+        <section class="content-metricas">
+            <div class="metricas">
+                <div class="metricas-group">
+                <div  class="metric-item">
+                    <h1 class="number" >400+</h1>
+                    <p class="text">Projetos concluídos</p>
+                    <p class="supporting-text">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+                </div>
+                <div  class="metric-item">
+                    <h1 class="number">100+</h1>
+                    <p class="text">Colaboradores</p>
+                    <p class="supporting-text">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+                </div>
+                <div  class="metric-item">
+                    <h1 class="number">20K</h1>
+                    <p class="text">Downloads</p>
+                    <p class="supporting-text">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes..</p>
+                </div>
+                <div  class="metric-item">
+                    <h1 class="number">500+</h1>
+                    <p class="text">Reviews 5 estrelas</p>
+                    <p class="supporting-text">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+                </div>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
 </body>
 </html>
