melhoria na estrutura html

--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
             <div class="metricas">
                 <div class="metricas-group">
                 <div  class="metric-item">
-                    <h1 class="number" >400+</h1>
+                    <strong class="number" >400+</strong>
                     <p class="text">Projetos concluídos</p>
                     <p class="supporting-text">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
                 </div>
                 <div  class="metric-item">
-                    <h1 class="number">100+</h1>
+                    <strong class="number">100+</strong>
                     <p class="text">Colaboradores</p>
                     <p class="supporting-text">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
                 </div>
                 <div  class="metric-item">
-                    <h1 class="number">20K</h1>
+                    <strong class="number">20K</strong>
                     <p class="text">Downloads</p>
                     <p class="supporting-text">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes..</p>
                 </div>
                 <div  class="metric-item">
-                    <h1 class="number">500+</h1>
+                    <strong class="number">500+</strong>
                     <p class="text">Reviews 5 estrelas</p>
                     <p class="supporting-text">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
                 </div>
