Adicionando sessão de vagas

--- a/index.html
+++ b/index.html
@@ -1,86 +1,154 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>OptimusTech</title>
-</head>
-<body>
-
-
+  </head>
+  <body>
     <nav>
-
-
-        <div class="logo-nav">
-            <img id="logo" src="./assets/image.png" alt="Logo da OptimusTech">
-            <h1 id="title-nav">OptimusTech</h1>
-        </div>
-        <div class="navigation">  
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Recursos</a></li>
-                <li><a href="#">Sobre nós</a></li>
-            </ul>
-        </div>
-        <div class="navigation-buttons">
-            <button id="btn-entrar">Entrar</button>
-            <button id="btn-cadastrar">Cadastrar</button>
-        </div>
-
-        
+      <div class="logo-nav">
+        <img id="logo" src="./assets/image.png" alt="Logo da OptimusTech" />
+        <h1 id="title-nav">OptimusTech</h1>
+      </div>
+      <div class="navigation">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Recursos</a></li>
+          <li><a href="#">Sobre nós</a></li>
+        </ul>
+      </div>
+      <div class="navigation-buttons">
+        <button id="btn-entrar">Entrar</button>
+        <button id="btn-cadastrar">Cadastrar</button>
+      </div>
     </nav>
 
-    <header>   
-
-
-            <p class="sub-heading">Sobre nós</p>
-            <div>
-                <h1>Por que somos diferentes?</h1>
-            </div>
-            <div class="heading-description">
-               <p> Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
-            </div>
-
-
+    <header>
+      <p class="sub-heading">Sobre nós</p>
+      <div>
+        <h1>Por que somos diferentes?</h1>
+      </div>
+      <div class="heading-description">
+        <p>
+          Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as
+          empresas de todo o mundo a se concentrarem naquilo que é realmente
+          importante para elas.
+        </p>
+      </div>
     </header>
 
-
     <main>
-
-
-        <section class="content-metricas">
-            <div class="metricas">
-                <div class="metricas-group">
-                <div  class="metric-item">
-                    <strong class="number" >400+</strong>
-                    <p class="text">Projetos concluídos</p>
-                    <p class="supporting-text">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
-                </div>
-                <div  class="metric-item">
-                    <strong class="number">100+</strong>
-                    <p class="text">Colaboradores</p>
-                    <p class="supporting-text">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
-                </div>
-                <div  class="metric-item">
-                    <strong class="number">20K</strong>
-                    <p class="text">Downloads</p>
-                    <p class="supporting-text">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes..</p>
-                </div>
-                <div  class="metric-item">
-                    <strong class="number">500+</strong>
-                    <p class="text">Reviews 5 estrelas</p>
-                    <p class="supporting-text">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
-                </div>
-                </div>
+      <section class="content-metricas">
+        <div class="metricas">
+          <div class="metricas-group">
+            <div class="metric-item">
+              <strong class="number">400+</strong>
+              <p class="text">Projetos concluídos</p>
+              <p class="supporting-text">
+                Nós ajudamos a construir mais de 400 projetos incríveis.
+              </p>
             </div>
-        </section>
+            <div class="metric-item">
+              <strong class="number">100+</strong>
+              <p class="text">Colaboradores</p>
+              <p class="supporting-text">
+                Temos mais de 100 colaboradores no nosso time que se preocupam
+                com nossos clientes.
+              </p>
+            </div>
+            <div class="metric-item">
+              <strong class="number">20K</strong>
+              <p class="text">Downloads</p>
+              <p class="supporting-text">
+                Nossos projetos que estão disponíveis em lojas já foram baixados
+                mais de 20.000 vezes..
+              </p>
+            </div>
+            <div class="metric-item">
+              <strong class="number">500+</strong>
+              <p class="text">Reviews 5 estrelas</p>
+              <p class="supporting-text">
+                Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas
+                em nossos produtos.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="vagas">
+        <div class="talentos">
+          <div class="container-talentos">
+            <div class="texto-talentos">
+              <p class="sub-talentos">vagas abertas!</p>
+              <h1>Procurando por talentos</h1>
+              <p>somos uma equipe 100% remota no Brasil inteiro</p>
+              <img
+                src="assets/talento.png"
+                alt="equipe de trabalho"
+                id="imagem-talentos"
+              />
+            </div>
+          </div>
+        </div>
 
+        <div class="vagas-abertas">
+          <div class="menu-vagas">
+            <div class="vagas-opc">
+              <p class="nome-vaga">Design</p>
+              <div class="job-post">
+                <p class="nome-vaga">Product Designer</p>
+                <div class="info-vaga">
+                  <p class="work-type">full</p>
+                  <p class="salary">Faixa salarial: R$7.000</p>
+                </div>
+              </div>
+              <div class="job-post">
+                <p class="nome-vaga">Product Designer</p>
+                <div class="info-vaga">
+                  <p class="work-type">full</p>
+                  <p class="salary">Faixa salarial: R$7.000</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="menu-vagas">
+            <div class="vagas-opc">
+              <p class="nome-vaga">Desenvolvimento</p>
+              <div class="job-post">
+                <p class="nome-vaga">Product Designer</p>
+                <div class="info-vaga">
+                  <p>full</p>
+                  <p>Faixa salarial: R$7.000</p>
+                </div>
+              </div>
+              <div class="job-post">
+                <p class="nome-vaga">Product Designer</p>
+                <div class="info-vaga">
+                  <p>full</p>
+                  <p>Faixa salarial: R$7.000</p>
+                </div>
+              </div>
+              <div class="job-post">
+                <p class="nome-vaga">Product Designer</p>
+                <div class="info-vaga">
+                  <p>full</p>
+                  <p>Faixa salarial: R$7.000</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
