--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
           </div>
         </div>
       </section>
+
+      <section class="depoimentos">
+
+          <div class="content-depoimentos">
+            <div class="text-depoimentos">
+              <p class="sub-heading">Veja o que nossos colaboradores falam sobre nós</p>
+              <p class="texto-depoimento">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+            </div>
+            <div class="atribuicao">
+              <img src="./assets/avatar.png" alt="avatar" class="imagem-avatar">
+              <strong class="nome-avatar">Julia Castro</strong>
+              <p class="cargo-avatar">Desenvolvedora Web</p>
+            </div>
+          </div>
+       
+      </section>
     </main>
   </body>
 </html>
