feat: acrescentando footer e melhorando estrutura do código

--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
               <div class="job-post">
                 <p class="nome-vaga">Product Designer</p>
                 <div class="info-vaga">
-                  <p class="work-type">full</p>
+                  <p class="work-type">Full-time</p>
                   <p class="salary">Faixa salarial: R$7.000</p>
                 </div>
               </div>
               <div class="job-post">
-                <p class="nome-vaga">Product Designer</p>
+                <p class="nome-vaga">UX Designer</p>
                 <div class="info-vaga">
-                  <p class="work-type">full</p>
-                  <p class="salary">Faixa salarial: R$7.000</p>
+                  <p class="work-type">Full-time</p>
+                  <p class="salary">Faixa salarial: R$6.000</p>
                 </div>
               </div>
             </div>
@@ -125,24 +125,24 @@
             <div class="vagas-opc">
               <p class="nome-vaga">Desenvolvimento</p>
               <div class="job-post">
-                <p class="nome-vaga">Product Designer</p>
+                <p class="nome-vaga">Desenvolvedor(a) iOS</p>
                 <div class="info-vaga">
-                  <p>full</p>
-                  <p>Faixa salarial: R$7.000</p>
+                  <p class="work-type">Full-time</p>
+                  <p class="salary">Faixa salarial: R$8.000</p>
                 </div>
               </div>
               <div class="job-post">
-                <p class="nome-vaga">Product Designer</p>
+                <p class="nome-vaga">Desenvolvedor(a) Front-end</p>
                 <div class="info-vaga">
-                  <p>full</p>
-                  <p>Faixa salarial: R$7.000</p>
+                  <p class="work-type">Full-time</p>
+                  <p class="salary">Faixa salarial: R$7.000</p>
                 </div>
               </div>
               <div class="job-post">
-                <p class="nome-vaga">Product Designer</p>
+                <p class="nome-vaga">Desenvolvedor(a) Back-end</p>
                 <div class="info-vaga">
-                  <p>full</p>
-                  <p>Faixa salarial: R$7.000</p>
+                  <p class="work-type">Full-time</p>
+                  <p class="salary">Faixa salarial: R$8.000</p>
                 </div>
               </div>
             </div>
@@ -166,5 +166,20 @@
        
       </section>
     </main>
+
+    <footer>
+        <div class="container-formulario">
+          <div class="content-formulario">
+            <h1>Acompanhe as nossas oportunidades</h1>
+            <p class="supporting-text">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+          </div>
+          <div class="campo-formulario">
+            <input type="email" placeholder="Seu email">
+            <button id="btn-cadastrar">Cadastrar</button>
+          </div>
+          <p class="copy">&copy;2022 OptimusTech. Todos os direitos reservados.</p>
+        </div>
+   
+    </footer>
   </body>
 </html>
